# numpy-dl

./: .gitignore  AGENTS.md  AUDIT-FIXES.md  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  ETHOS.md  LICENSE  README.md  RESTRUCTURE.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.opencode/metrics/: write-size-violations.jsonl
docs/plans/: v0.1.0-spec.md  v0.2.0-spec.md  v0.3.0-spec.md  v0.4.0-spec.md  v0.5.0-spec.md  v0.6.0-spec.md  validation-spec.md
examples/: frozen_lake_q_learning.py  ppo_cartpole.py  ppo_lunar_lander.py
examples/01_nn_core/: xor_adam.py  xor_sgd.py
examples/02_tabular_rl/: frozen_lake_q_learning.py  gridworld_q_learning.py
examples/03_deep_rl/: dqn_cartpole.py  reinforce_cartpole.py
src/numpy_dl/: __init__.py
src/numpy_dl/environments/: frozen_lake.py  grid_world.py  gym_adapter.py
src/numpy_dl/memory/: replay_buffer.py
src/numpy_dl/nn/: activations.py  gradcheck.py  layers.py  losses.py  sequential.py
src/numpy_dl/optim/: adam.py  sgd.py
src/numpy_dl/rl/: dqn.py  ppo.py  q_learning.py  reinforce.py  utils.py
src/numpy_dl/utils/: init.py  save_load.py
tests/: test_placeholder.py
tests/environments/: test_frozen_lake.py
tests/memory/: test_replay_buffer.py
tests/nn/: test_activations.py  test_losses.py
tests/optim/: test_adam.py
tests/rl/: test_dqn.py  test_ppo.py  test_q_learning.py  test_reinforce.py  test_utils.py
tests/test_integration/: test_xor.py  test_xor_adam.py
tests/unit/environments/: test_grid_world.py
tests/unit/nn/: test_init.py  test_layers.py  test_sequential.py
tests/unit/optim/: test_sgd.py
tests/unit/rl/: test_gradients.py  test_reinforce.py
tests/validation/: conftest.py  test_activations.py  test_layers.py  test_mlp.py  test_optimizers.py
